kubernetes/base/apps/home-automation/zwave/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave
  namespace: home-automation
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zwave
  template:
    metadata:
      labels:
        app: zwave
    spec:
      enableServiceLinks: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "homeseer.feature.node.kubernetes.io/g8"
                    operator: "In"
                    values:
                      - "true"
      containers:
        - name: app
          image: ghcr.io/zwave-js/zwave-js-ui:11.16.0@sha256:06f6b940fffb3c7012dc05e3c2c93daeccb6f6573bd03987058d513a4e085eee
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /usr/src/app/store
            - name: device
              mountPath: /dev/zwave
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: zwave
        - name: device
          hostPath:
            path: /dev/ttyACM0
        - name: tmp
          emptyDir: {}
