kubernetes/base/apps/home-automation/zwave/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
  namespace: home-automation
spec:
  type: ClusterIP
  selector:
    app: zwave
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websocket
      port: 3000
      targetPort: 3000
      protocol: TCP
